# RAG_langchain

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rag_finance/api/: routes.py
rag_finance/core/: config.py  graph.py  index.py  models.py  prompts.py
rag_finance/data/: README
rag_finance/tests/end2end/: sample_questions.py
